Bug 1673011 - Make the search indicator close button background the same as the urlbar background, which fixes high-contrast mode. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D94663

UltraBlame original commit: 4b2288d37d5627f6a7c989e16ff98364e10c095d

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -2267,10 +2267,6 @@ stroke
 opacity
 ;
 fill
-:
-currentColor
-;
-fill
 -
 opacity
 :
@@ -2283,6 +2279,86 @@ opacity
 0
 .
 6
+;
+/
+*
+fill
+and
+background
+-
+color
+should
+match
+the
+urlbar
+focused
+color
+and
+background
+.
+*
+/
+fill
+:
+currentColor
+;
+background
+-
+color
+:
+Field
+;
+}
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+close
+:
+-
+moz
+-
+lwtheme
+{
+/
+*
+fill
+and
+background
+-
+color
+should
+match
+the
+urlbar
+focused
+color
+and
+background
+.
+*
+/
+fill
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+focus
+-
+color
+)
 ;
 background
 -
@@ -2298,10 +2374,7 @@ toolbar
 -
 field
 -
-background
--
-color
-white
+focus
 )
 ;
 }
